--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "repl_nix_utilssuporte"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 flask = "^3.0.0"
+requests = "^2.31.0"
+services = "^0.1.1"
 
 
 [build-system]
